newEndpoints
